-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 15
-
Component/s: hotspot
-
b25
-
x86
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8293405 | 11.0.18-oracle | Thomas Schatzl | P3 | Resolved | Fixed | b01 |
| JDK-8279352 | 11.0.15 | Jie Fu | P3 | Resolved | Fixed | b01 |
After more investigation, it seems to be a generic problem, not zgc-only.
- backported by
-
JDK-8279352 NUMA APIs fail to work in dockers due to dependent syscalls are disabled by default
-
- Resolved
-
-
JDK-8293405 NUMA APIs fail to work in dockers due to dependent syscalls are disabled by default
-
- Resolved
-
- relates to
-
JDK-8268014 Build failure on SUSE Linux Enterprise Server 11.4 (s390x) due to 'SYS_get_mempolicy' was not declared
-
- Resolved
-
-
JDK-8198715 Investigate adding NUMA container support to hotspot
-
- Closed
-
-
JDK-8241354 ZGC still crashes in containers with NUMA due to get_mempolicy is disabled by default
-
- Resolved
-
- links to
-
Commit
openjdk/jdk11u-dev/d356b898
-
Commit
openjdk/jdk/1413f9e0
-
Review
openjdk/jdk11u-dev/733
-
Review
openjdk/jdk/4205