8241423: NUMA APIs fail to work in dockers due to dependent syscalls are disabled by default